fix: add some white space between label and component

--- a/src/components/General/LabelInputField.css
+++ b/src/components/General/LabelInputField.css
@@ -1,4 +1,5 @@
 .input-container {
     background-color: #fff;
     border-radius: 12px;
+    margin-top: 8px;
 }
